--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@
                             class="img-fluid w-100 rounded" alt="Image">
                     </div>
                 </div>
-                <div class="col-lg-7 wow fadeInRight" data-wow-delay="0.3s">
+                <div class="col-md-6 wow fadeInRight" data-wow-delay="0.3s">
                     <h4 class="text-secondary sub-title fw-bold">Who We Are?</h4>
                     <p>
                         Mtendere is a renowned educational consulting agency that specializes in providing
@@ -280,32 +280,52 @@
 
             <br>
 
+            <div class="tabs ">
+                <div class="tab-2">
+                    <label for="tab2-1"><i class="fa fa-eye" aria-hidden="true"></i>
+                        </label>
+                        <input id="tab2-1" name="tabs-two" type="radio" checked="checked">
+                    <div>
+                        <h4>Our Vision</h4>
+                        <p>
+                            To create a world where every student has the opportunity to excel in their education and
+                            achieve their dreams.
+                        </p>
+                        <p>
+                            By offering 200 children international scholarships, Mtendere aims to empower individuals to
+                            make informed decisions about their future and to contribute to the success of their families.
+                        </p>                    
+                    </div>
+                </div>
+                <div class="tab-2">
+                    <label for="tab2-2"> <i class="fa fa-hand-peace"></i></label>
+                    <input id="tab2-2" name="tabs-two" type="radio">
+                    <div>
+                        <h4>Core Values</h4>
+                        <p>
+                            To create a world where every student has the opportunity to excel in their education and
+                            achieve their dreams.
+                        </p>
+                        <p>
+                            We Build and intergrate our core values in our daily operations and services to ensure that we
+                            provide students with the best possible support and resources to achieve their academic and
+                            professional goals.
+                        </p>
+                    </div>
+                </div>
+            </div>
+
             <div class="row">
                 <div class="col-md-6">
                     <i class="fa fa-eye" aria-hidden="true"></i>
-                    <h3>Our Vision</h3>
-                    <p>
-                        To create a world where every student has the opportunity to excel in their education and
-                        achieve their dreams.
-                    </p>
-                    <p>
-                        By offering 200 children international scholarships, Mtendere aims to empower individuals to
-                        make informed decisions about their future and to contribute to the success of their families.
-                    </p>
+                    Our Vision
+                    
                 </div>
 
                 <div class="col-md-6">
                     <i class="fa fa-fa-balance-scale" aria-hidden="true"></i>
                     <h3>Our Core Values</h3>
-                    <p>
-                        To create a world where every student has the opportunity to excel in their education and
-                        achieve their dreams.
-                    </p>
-                    <p>
-                        We Build and intergrate our core values in our daily operations and services to ensure that we
-                        provide students with the best possible support and resources to achieve their academic and
-                        professional goals.
-                    </p>
+                    
                 </div>
 
                 <div class="col-md-6">
@@ -617,7 +637,7 @@
                 </select>
             </div>
         </div>
-        <div class="row scholarship-slider">
+        <div class="row scholarship-slider center">
             <div class="col-md-4">
                 <div class="card scholarship-box h-100">
                     <img src="img/courses-2.jpg" class="card-img-top" alt="University of Oxford">
@@ -631,32 +651,32 @@
                         <small class="text-muted">Location: UK</small>
                     </div>
                 </div>
-                <div class="col-md-4">
-                    <div class="card scholarship-box h-100">
-                        <img src="img/hero-slide-3.jpg" class="card-img-top" alt="Harvard University">
-                        <div class="card-body">
-                            <h3 class="card-title"><i class="fas fa-university"></i> Harvard University</h3>
-                            <p class="card-text">Ivy League institution with extensive financial aid options for
-                                qualified applicants.</p>
-                            <a href="#" class="btn btn-primary">Apply Now</a>
-                        </div>
-                        <div class="card-footer">
-                            <small class="text-muted">Location: USA</small>
-                        </div>
+            </div>
+            <div class="col-md-4">
+                <div class="card scholarship-box h-100">
+                    <img src="img/hero-slide-3.jpg" class="card-img-top" alt="Harvard University">
+                    <div class="card-body">
+                        <h3 class="card-title"><i class="fas fa-university"></i> Harvard University</h3>
+                        <p class="card-text">Ivy League institution with extensive financial aid options for
+                            qualified applicants.</p>
+                        <a href="#" class="btn btn-primary">Apply Now</a>
+                    </div>
+                    <div class="card-footer">
+                        <small class="text-muted">Location: USA</small>
                     </div>
                 </div>
-                <div class="col-md-4">
-                    <div class="card scholarship-box h-100">
-                        <img src="img/hero-slide-1.jpg" class="card-img-top" alt="Stanford University">
-                        <div class="card-body">
-                            <h3 class="card-title"><i class="fas fa-graduation-cap"></i> Stanford University</h3>
-                            <p class="card-text">Leading research university offering full-ride scholarships to
-                                exceptional students.</p>
-                            <a href="#" class="btn btn-primary">Apply Now</a>
-                        </div>
-                        <div class="card-footer">
-                            <small class="text-muted">Location: USA</small>
-                        </div>
+            </div>
+            <div class="col-md-4">
+                <div class="card scholarship-box h-100">
+                    <img src="img/hero-slide-1.jpg" class="card-img-top" alt="Stanford University">
+                    <div class="card-body">
+                        <h3 class="card-title"><i class="fas fa-graduation-cap"></i> Stanford University</h3>
+                        <p class="card-text">Leading research university offering full-ride scholarships to
+                            exceptional students.</p>
+                        <a href="#" class="btn btn-primary">Apply Now</a>
+                    </div>
+                    <div class="card-footer">
+                        <small class="text-muted">Location: USA</small>
                     </div>
                 </div>
             </div>
