--- a/index.html
+++ b/index.html
@@ -249,10 +249,6 @@
                             Mtendere Education Consultancy
                         </h1>
                     </div>
-                    <div class="col-xl-4 text-xl-end wow fadeInUp" data-wow-delay="0.3s">
-                        <a class="btn btn-primary rounded-pill text-white py-3 px-5" href="university.html">View All <i
-                                class="fa fa-university" aria-hidden="true"></i></a>
-                    </div>
                 </div>
             </div>
             <div class="row g-5 align-items-center">
@@ -277,11 +273,12 @@
                     <a class="btn btn-primary rounded-pill text-white py-3 px-5" href="#">Learn More</a>
                 </div>
             </div>
+        </div>
+    </div>
 
-            <br>
-
-            <div class="tabs ">
-                <div class="tab-2">
+    <div id="tabs-main">
+        <div class="tabs ">
+            <div class="tab-2">
                     <label for="tab2-1"><i class="fa fa-eye" aria-hidden="true"></i>
                         </label>
                         <input id="tab2-1" name="tabs-two" type="radio" checked="checked">
@@ -312,39 +309,6 @@
                             professional goals.
                         </p>
                     </div>
-                </div>
-            </div>
-
-            <div class="row">
-                <div class="col-md-6">
-                    <i class="fa fa-eye" aria-hidden="true"></i>
-                    Our Vision
-                    
-                </div>
-
-                <div class="col-md-6">
-                    <i class="fa fa-fa-balance-scale" aria-hidden="true"></i>
-                    <h3>Our Core Values</h3>
-                    
-                </div>
-
-                <div class="col-md-6">
-                    <i class="fa fa-bullseye" aria-hidden="true"></i>
-                    <h3>Our Mission</h3>
-                    <p>
-                        To create a world where every student has the opportunity to excel in their education and
-                        achieve their dreams.
-                    </p>
-                    <p>
-                        By offering comprehensive, personalized guidance to students from around the world, Mtendere
-                        aims to empower individuals to make informed decisions about their future and to contribute to
-                        the success of their families.
-                    </p>
-                </div>
-                <div class="col-md-12">
-                    <a href="contact.html" class="get-started">Contact Us</a>
-                    <p class="mt-4">We are committed to providing exceptional support, guidance, and resources to help
-                        students achieve their dreams and achieve success in their education.</p>
                 </div>
             </div>
         </div>
