--- a/index.html
+++ b/index.html
@@ -322,21 +322,18 @@
                 <div class="col-12 col-sm-6 col-md-6 col-xl-3 wow fadeInUp" data-wow-delay="0.1s">
                     <div class="counter">
                         <div class="counter-icon w-100 d-flex align-items-center justify-content-center">
-                            <h3>Students</h3>
-                            <span class="counter-value" data-toggle="counter-up">158</span>
-                            <h4 class="text-secondary mb-0" style="font-weight: 600; font-size: 25px;">+</h4>
+                            <h3>Courses & Programss</h3>
                         </div>
                         <div class="counter-content d-flex align-items-center justify-content-center mt-4">
-                            <h3>International student</h3>
                             <span class="counter-value" data-toggle="counter-up">158</span>
-                            <h4 class="text-seco ndary mb-0" style="font-weight: 600; font-size: 25px;">+</h4>
+                            <h4 class="text-secondary mb-0" style="font-weight: 600; font-size: 25px;">+</h4>
                         </div>
                     </div>
                 </div>
                 <div class="col-12 col-sm-6 col-md-6 col-xl-3 wow fadeInUp" data-wow-delay="0.3s">
                     <div class="counter">
                         <div class="counter-icon w-100 d-flex align-items-center justify-content-center">
-                            <h3>Univesities</h3>
+                            <h3>Pro Instructor</h3>
                         </div>
                         <div class="counter-content d-flex align-items-center justify-content-center mt-4">
                             <span class="counter-value" data-toggle="counter-up">49</span>
@@ -344,10 +341,10 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-12 col-sm-6 co-l-md-6 col-xl-3 wow fadeInUp" data-wow-delay="0.5s">
+                <div class="col-12 col-sm-6 col-md-6 col-xl-3 wow fadeInUp" data-wow-delay="0.5s">
                     <div class="counter">
                         <div class="counter-icon w-100 d-flex align-items-center justify-content-center">
-                            <h3>Working Students</h3>
+                            <h3>Total Scholarships</h3>
                         </div>
                         <div class="counter-content d-flex align-items-center justify-content-center mt-4">
                             <span class="counter-value" data-toggle="counter-up">17</span>
@@ -358,7 +355,7 @@
                 <div class="col-12 col-sm-6 col-md-6 col-xl-3 wow fadeInUp" data-wow-delay="0.7s">
                     <div class="counter">
                         <div class="counter-icon w-100 d-flex align-items-center justify-content-center">
-                            <h3>Career Choice</h3>
+                            <h3>Happy Abroad Students</h3>
                         </div>
                         <div class="counter-content d-flex align-items-center justify-content-center mt-4">
                             <span class="counter-value" data-toggle="counter-up">567</span>
@@ -370,9 +367,8 @@
         </div>
     </div>
     <!-- Counter Facts End -->
-
+    
     <!-- Video Section -->
-
     <section id="video" class="text-center wow fadeInUp">
         <div class="overlay">
             <div class="container-fluid container-full">
