--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
         <div class="arrows">
             <button id="prev">
                 <button id="prev">
-                    << /button>
+                    <button id="prev"><</button>
                 </button>
                 <button id="next">
                     <button id="next">></button>
