--- a/index.html
+++ b/index.html
@@ -277,7 +277,7 @@
     <div id="tabs-main">
         <div class="tabs ">
             <div class="tab-2">
-                <label for="tab2-1"><i class="fa fa-eye" aria-hidden="true">Vision</i>
+                <label for="tab2-1"><i class="fa fa-eye" aria-hidden="true"></i>
                 </label>
                 <input id="tab2-1" name="tabs-two" type="radio" checked="checked">
                 <div>
@@ -293,7 +293,7 @@
                 </div>
             </div>
             <div class="tab-2">
-                <label for="tab2-2"> <i class="fa fa-hand-peace"></i>Mission</label>
+                <label for="tab2-2"> <i class="fa fa-hand-peace"></i></label>
                 <input id="tab2-2" name="tabs-two" type="radio">
                 <div>
                     <h4>Our Mission</h4>
@@ -306,7 +306,7 @@
                 </div>
             </div>
             <div class="tab-2">
-                <label for="tab2-2"> <i class="fa fa-hand-peace"></i>Core Values</label>
+                <label for="tab2-2"> <i class="fa fa-hand-peace"></i></label>
                 <input id="tab2-3" name="tabs-two" type="radio">
                 <div>
                     <h4>Core Values</h4>
@@ -365,7 +365,7 @@
                 <div class="col-12 col-sm-6 col-md-6 col-xl-3 wow fadeInUp" data-wow-delay="0.7s">
                     <div class="counter">
                         <div class="counter-icon w-100 d-flex align-items-center justify-content-center">
-                            <h3>Happy Abroad Students</h3>
+                            <h3>Abroad Students</h3>
                         </div>
                         <div class="counter-content d-flex align-items-center justify-content-center mt-4">
                             <span class="counter-value" data-toggle="counter-up">567</span>
