--- a/index.html
+++ b/index.html
@@ -518,58 +518,51 @@
             </div>
     </section>
 
-    <div class="faq-container">
-        <div class="faq-menu">
-            FAQ's
-        </div>
-        <div class="faq-box">
-            <div class="faq-header">
-                What is the eligibility test?
-            </div>
-            <div class="faq-content">
-                The eligibility test is a test that helps us know your best interest and helps you apply for the best
-                universities.
+    <section id="frequent-asked">
+        <div class="container">
+            <h2>Frequently Asked Questions</h2>
 
-                Your test will examined by our professionals and you will be given the best universities that match your
-                criteria in your email box.
+            <div style="visibility: hidden; position: absolute; width: 0px; height: 0px;">
+            <svg xmlns="http://www.w3.org/2000/svg">
+                <symbol viewBox="0 0 24 24" id="expand-more">
+                <path d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z"/><path d="M0 0h24v24H0z" fill="none"/>
+                </symbol>
+                <symbol viewBox="0 0 24 24" id="close">
+                <path d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"/><path d="M0 0h24v24H0z" fill="none"/>
+                </symbol>
+            </svg>
             </div>
-        </div>
-        <div class="faq-box">
-            <div class="faq-header">
-                How many scholarships are available?
-            </div>
-            <div class="faq-content">
-                We have scholarships available for students from all over the world.
-                <br>
-                Check out our scholarship page for more information.
-            </div>
-        </div>
-        <div class="faq-box">
-            <div class="faq-header">
-                How can I apply for a scholarship?
-            </div>
-            <div class="faq-content">
-                Applying for a scholarship is simple and easy.
-                <br>
-                Fill out the application form on our scholarship page.
-                <br>
-                Check your email box for confirmation and payment instructions.
-            </div>
-        </div>
-        <div class="faq-box">
-            <div class="faq-header">
-                Can I apply for multiple scholarships?
-            </div>
-            <div class="faq-content">
-                Yes, you can apply for multiple scholarships.
-                <br>
-                Just fill out the application form for each scholarship you want to apply for.
-                <br>
-                Check your email box for confirmation and payment instructions.
-            </div>
-        </div>
-    </div>
 
+            <details open>
+            <summary>
+                Does this product have what I need?
+                <svg class="control-icon control-icon-expand" width="24" height="24" role="presentation"><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#expand-more" /></svg>
+                <svg class="control-icon control-icon-close" width="24" height="24" role="presentation"><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#close" /></svg>
+            </summary>
+            <p>Totally. Totally does.</p>
+            </details>
+
+            <details>
+
+            <summary>
+                Can I use it all the time?
+                <svg class="control-icon control-icon-expand" width="24" height="24" role="presentation"><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#expand-more" /></svg>
+                <svg class="control-icon control-icon-close" width="24" height="24" role="presentation"><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#close" /></svg>
+            </summary>
+            <p>Of course you can, we won't stop you.</p>
+            </details>
+
+            <details>
+            <summary>
+                Are there any restrictions?    
+                <svg class="control-icon control-icon-expand" width="24" height="24" role="presentation"><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#expand-more" /></svg>
+                <svg class="control-icon control-icon-close" width="24" height="24" role="presentation"><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#close" /></svg>
+            </summary>
+            <p>Only your imagination my friend. Go forth!</p>
+            </details>
+        </div>
+    </section>
+    
     <!--- Scholarships and Universities --->
     <section id="scholarships" class="padd-section">
         <div class="container">
