--- a/index.html
+++ b/index.html
@@ -701,59 +701,24 @@
                 <div class="col-xl-8">
                     <h4 class="text-secondary sub-title fw-bold wow fadeInUp" data-wow-delay="0.1s">Testimonials
                     </h4>
-                    <h1 class="display-2 mb-0 wow fadeInUp" data-wow-delay="0.3s">What Our Partners say? </h1>
+                    <h1 class="display-2 mb-0 wow fadeInUp" data-wow-delay="0.3s">Partners say? </h1>
                 </div>
             </div>
         </div>
-        <div class="container">
-            <div class="row justify-content-center">
-                <div class="col-md-8">
-                    <div class="testimonials-carousel">
-                        <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
-                            <div class="carousel-inner" role="listbox">
-                                <div class="carousel-item  active">
-                                    <div class="top-top">
-                                        <h2>
-                                            Dan Kashuwa
-                                        </h2>
-                                        <p>The process of studying for Eligibility Test was made easy by the help of
-                                            Mtendere Education Consultancy. I am very grateful for the help I received
-                                            from the team. I would recommend Mtendere Education Consultancy to anyone
-                                            looking to study abroad.</p>
-                                        </p>
-                                        <h4>CHINA</h4>
-                                    </div>
-                                </div>
+        <div id="testmonial-students">
+            <div id="content">
+                <div class="testimonial-carousel">
+                    <blockquote>
+                        <p>
 
-                                <div class="carousel-item ">
-                                    <div class="top-top">
-                                        <h2>Emily Banda</h2>
-                                        <p>“I really enjoyed working with Mtendere Education Consultancy. They provided
-                                            me
-                                            with a friendly and supportive environment to learn and grow. I highly
-                                            recommend this consultancy to anyone looking to improve their English
-                                            language skills.”
-                                        </p>
-                                        <h4>INDIA</h4>
-                                    </div>
-                                </div>
-                                <div class="carousel-item ">
-                                    <div class="top-top">
-                                        <h2>Aisha Jamal</h2>
-                                        <p>“It was my good luck to get a consultancy which provides me friendly with a
-                                            good learning
-                                            environment which assists me to find out one of the best universities and a
-                                            city to live in
-                                            Australia. I am always thankful to the consultancy to help to get one step
-                                            forward to my
-                                            career(dream).”
-                                        </p>
-                                        <h4>Australia</h4>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
+                        </p>
+                    </blockquote>
+                    <div>
+
                     </div>
+                    <p>
+                    John Doe &mdash; Worcestershire, UK
+                    </p>
                 </div>
             </div>
         </div>
@@ -768,7 +733,7 @@
                     <div class="col-xl-8">
                         <h4 class="text-secondary sub-title fw-bold wow fadeInUp" data-wow-delay="0.1s">Events
                         </h4>
-                        <h1 class="display-2 mb-0 wow fadeInUp" data-wow-delay="0.3s">Orientations, Career Speech & More
+                        <h1 class="display-2 mb-0 wow fadeInUp" data-wow-delay="0.3s">
                         </h1>
                     </div>
                 </div>
