--- a/event.html
+++ b/event.html
@@ -119,8 +119,8 @@
     </div>
     <!-- Navbar End -->
 
-    <section id="event-body">
-        <div id="event-page" class="container py-5">
+    <section id="event-body" class="container py-5">
+        <div id="event-page" class="container">
             <h1>Events</h1>
             <section>
             <h2>2 December</h2>
