--- a/index.html
+++ b/index.html
@@ -119,9 +119,7 @@
                 <img src="img/portrait-african-young-businessman-businesswoman-looking-digital-tablet.jpg">
                 <div class="content">
                     <div class="author">Welcome To,</div>
-                    <div class="title">Mtendere Education Conusult</div>
-                    <div class="topic">Enroll Abroad Eductaion</div>
-                    <div class="des">Today!
+                    <div class="title">Mtendere Education Consult</div>
                     </div>
                     <div class="get-started btn">
                         <button>SUBSCRIBE</button>
@@ -129,51 +127,35 @@
                 </div>
             </div>
             <div class="item">
-                <img src="img/students-talking-after-class.jpg">
+                <img src="img/portrait-african-young-businessman-businesswoman-looking-digital-tablet.jpg">
                 <div class="content">
-                    <div class="author">LUNDEV</div>
-                    <div class="title">DESIGN SLIDER</div>
-                    <div class="topic">ANIMAL</div>
-                    <div class="des">
-
+                    <div class="author">Welcome To,</div>
+                    <div class="title">Mtendere Education Consult</div>
                     </div>
-                    <div class="buttons">
-                        <button>SEE MORE</button>
+                    <div class="get-started btn">
                         <button>SUBSCRIBE</button>
                     </div>
                 </div>
             </div>
             <div class="item">
-                <img src="img/young-adults-meeting-up-study.jpg">
+                <img src="img/portrait-african-young-businessman-businesswoman-looking-digital-tablet.jpg">
                 <div class="content">
-                    <div class="author">LUNDEV</div>
-                    <div class="title">DESIGN SLIDER</div>
-                    <div class="topic">ANIMAL</div>
-                    <div class="des">
-
+                    <div class="author">Welcome To,</div>
+                    <div class="title">Mtendere Education Consult</div>
                     </div>
-                    <div class="buttons">
-                        <button>SEE MORE</button>
-                        <button>SUBSCRIBE</button>
-                    </div>
-                </div>
-            </div>
-            <div class="item">
-                <img src="img/students-talking-after-class.jpg">
-                <div class="content">
-                    <div class="author">LUNDEV</div>
-                    <div class="title">DESIGN SLIDER</div>
-                    <div class="topic">ANIMAL</div>
-                    <div class="des">
-
-                    </div>
-                    <div class="buttons">
-                        <button>SEE MORE</button>
+                    <div class="get-started btn">
                         <button>SUBSCRIBE</button>
                     </div>
                 </div>
             </div>
         </div>
+        <!-- carousel control -->
+        <div class="controls">
+            <div class="prev"><i class="fa fa-angle-left"></i></div>
+            <div class="next"><i class="fa fa-angle-right"></i></div>
+        </div>
+        <div class="dots"></div>
+
         <!-- list thumnail -->
         <div class="thumbnail">
             <div class="item">
@@ -222,7 +204,7 @@
             </div>
         </div>
         <!-- next prev -->
-        
+
         <!-- time running -->
         <div class="time"></div>
 
@@ -232,86 +214,15 @@
     <!-- About Start -->
     <div class="container-fluid py-5">
         <div class="container py-5">
-            <div class="pb-5">
-                <div class="row g-4 align-items-end">
-                    <div class="col-xl-8">
-                        <h4 class="text-secondary sub-title fw-bold wow fadeInUp" data-wow-delay="0.1s">About</h4>
-                        <h1 class="display-2 mb-0 wow fadeInUp" data-wow-delay="0.3s">
-                            Mtendere Education Consultancy
-                        </h1>
-                    </div>
+            <div class="row align-items-center">
+                <div class="col-lg-6">
+                    <img class="img-fluid mb-4 mb-lg-0" src="img/Malawian Students on Campus at Chandigarh University.JPG" alt="">
                 </div>
-            </div>
-            <div class="row g-5 align-items-center">
-                <div class="col-lg-5 wow fadeInLeft" data-wow-delay="0.1s">
-                    <div class="border bg-secondary rounded">
-                        <img src="img/Malawian Students on Campus at Chandigarh University.JPG"
-                            class="img-fluid w-100 rounded" alt="Image">
-                    </div>
-                </div>
-                <div class="col-md-6 wow fadeInRight" data-wow-delay="0.3s">
-                    <h4 class="text-secondary sub-title fw-bold">Who We Are?</h4>
-                    <p>
-                        Mtendere is a renowned educational consulting agency that specializes in providing
-                        comprehensive, personalized guidance to students from around the world. Our mission is to help
-                        students achieve their dreams and achieve success in their education.
-                    </p>
-                    <p>
-                        Our team of expert advisors, tutors, and counselors are dedicated to guiding you through the
-                        complexities of education, ensuring that you receive the best possible support and resources to
-                        achieve your academic and professional goals.
-                    </p>
-                    <a class="btn btn-primary rounded-pill text-white py-3 px-5" href="#">Learn More</a>
-                </div>
-            </div>
-        </div>
-    </div>
-
-    <div id="tabs-main">
-        <div class="tabs ">
-            <div class="tab-2">
-                <label for="tab2-1"><i class="fa fa-eye" aria-hidden="true"></i>
-                </label>
-                <input id="tab2-1" name="tabs-two" type="radio" checked="checked">
-                <div>
-                    <h4>Our Vision</h4>
-                    <p>
-                        To create a world where every student has the opportunity to excel in their education and
-                        achieve their dreams.
-                    </p>
-                    <p>
-                        By offering 200 children international scholarships, Mtendere aims to empower individuals to
-                        make informed decisions about their future and to contribute to the success of their families.
-                    </p>
-                </div>
-            </div>
-            <div class="tab-2">
-                <label for="tab2-2"> <i class="fa fa-hand-peace"></i></label>
-                <input id="tab2-2" name="tabs-two" type="radio">
-                <div>
-                    <h4>Our Mission</h4>
-                    <p>
-
-                    </p>
-                    <p>
-
-                    </p>
-                </div>
-            </div>
-            <div class="tab-2">
-                <label for="tab2-2"> <i class="fa fa-hand-peace"></i></label>
-                <input id="tab2-3" name="tabs-two" type="radio">
-                <div>
-                    <h4>Core Values</h4>
-                    <p>
-                        To create a world where every student has the opportunity to excel in their education and
-                        achieve their dreams.
-                    </p>
-                    <p>
-                        We Build and intergrate our core values in our daily operations and services to ensure that we
-                        provide students with the best possible support and resources to achieve their academic and
-                        professional goals.
-                    </p>
+                <div class="col-lg-6">
+                    <h1 class="display-4 text-uppercase mb-4">Best digital agency in downtown</h1>
+                    <h5 class="text-uppercase text-primary mb-3">Clita elitr et amet et ipsum sea. Ipsum stet kasd ea et no est duo diam. Lorem dolores eos ut nonumy ipsum sit clita lorem no amet dolor dolore, stet sit dolor justo</h5>
+                    <p class="mb-4">Eirmod est dolor nonumy sea amet dolore erat sit dolor et dolor vero. Tempor ipsum at justo amet at ipsum justo. Aiam kasd sea sit dolor duo elitr dolor amet, justo est ipsum amet dolor ut ipsum. Labore diam et nonumy amet dolores. Volup sit labore dolores erat, magna justo sed lorem kasd ea dolor. Labore sit clita invidunt, est dolores lorem sed ipsum kasd no amet ipsum.</p>
+                    <a href="" class="btn btn-primary text-uppercase py-3 px-5">Read More</a>
                 </div>
             </div>
         </div>
