--- a/index.html
+++ b/index.html
@@ -126,8 +126,10 @@
                     </div>
                 </div>
             </div>
+        </div>
+        <div class="list">
             <div class="item">
-                <img src="img/portrait-african-young-businessman-businesswoman-looking-digital-tablet.jpg">
+                <img src="img/students-talking-after-class.jpg">
                 <div class="content">
                     <div class="author">Welcome To,</div>
                     <div class="title">Mtendere Education Consult</div>
@@ -137,6 +139,8 @@
                     </div>
                 </div>
             </div>
+        </div>
+        <div class="list">
             <div class="item">
                 <img src="img/portrait-african-young-businessman-businesswoman-looking-digital-tablet.jpg">
                 <div class="content">
@@ -149,6 +153,8 @@
                 </div>
             </div>
         </div>
+        
+        
         <!-- carousel control -->
         <div class="controls">
             <div class="prev"><i class="fa fa-angle-left"></i></div>
