--- a/index.html
+++ b/index.html
@@ -81,8 +81,6 @@
             <div class="collapse navbar-collapse justify-content-between px-lg-3" id="navbarCollapse">
                 <div class="navbar-nav mx-auto py-0">
                     <a href="index.html" class="nav-item nav-link active">Home</a>
-                    <a href="about.html" class="nav-item nav-link">About</a>
-                    <a href="service.html" class="nav-item nav-link">Services</a>
                     <a href="course.html" class="nav-item nav-link">Programs</a>
                     <div class="nav-item dropdown">
                         <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">More</a>
@@ -105,6 +103,8 @@
                     </div>
                     <a href="blog.html" class="nav-item nav-link">Blog</a>
                     <a href="event.html" class="nav-item nav-link">Events</a>
+
+                    <a href="login.html" class="btn btn-primary py-2 px-4 d-none d-lg-block">Login</a>
                 </div>
             </div>
         </nav>
@@ -120,10 +120,9 @@
                 <div class="content">
                     <div class="author">Welcome To,</div>
                     <div class="title">Mtendere Education Consult</div>
-                    </div>
-                    <div class="get-started btn">
-                        <button>SUBSCRIBE</button>
-                    </div>
+                </div>
+                <div class="get-started btn">
+                    <button>SUBSCRIBE</button>
                 </div>
             </div>
         </div>
@@ -133,10 +132,9 @@
                 <div class="content">
                     <div class="author">Welcome To,</div>
                     <div class="title">Mtendere Education Consult</div>
-                    </div>
-                    <div class="get-started btn">
-                        <button>SUBSCRIBE</button>
-                    </div>
+                </div>
+                <div class="get-started btn">
+                    <button>SUBSCRIBE</button>
                 </div>
             </div>
         </div>
@@ -146,15 +144,12 @@
                 <div class="content">
                     <div class="author">Welcome To,</div>
                     <div class="title">Mtendere Education Consult</div>
-                    </div>
-                    <div class="get-started btn">
-                        <button>SUBSCRIBE</button>
-                    </div>
+                </div>
+                <div class="get-started btn">
+                    <button>SUBSCRIBE</button>
                 </div>
             </div>
         </div>
-        
-        
         <!-- carousel control -->
         <div class="controls">
             <div class="prev"><i class="fa fa-angle-left"></i></div>
@@ -216,6 +211,8 @@
 
         <div class="waves"></div>
     </div>
+
+
 
     <!-- About Start -->
     <div class="container-fluid py-5">
