--- a/index.html
+++ b/index.html
@@ -439,19 +439,19 @@
                 </div>
             </div>
         </div>
-        <div class="container">
+        <div id="test" class="container">
             <div class="row">
-                <div class="col-md-12">
-                    <p class="mt-4">
-                        Click "test" button to take eligibility test which will help us know your best interest and help
-                        you apply for the best universities.
-
-                        Your test will examined by our professionals and you will be given the best universities that
-                        match your criteria in your email box.
-                        <br>
-                        <span>Good Luck!</span>
-                    </p>
-                    <a href="eligibility-test.html" class="btn btn-primary">Test</a>
+                <div class="frame">
+                    <div class="circle"></div>
+                    <div class="line left"></div>
+                    <div class="line right"></div>
+                    <div class="bracket left"></div>
+                    <div class="bracket right"></div>
+                    <div class="small top"><span class="first-letter">T</span>ake</div>
+                    <div class="big">Test</div>
+                    <div class="small bottom">& Achieve <span class="first-letter">I</span>nternatiol Studies</div>
+                    <div class="hide top"></div>
+                    <div class="hide bottom"></div>
                 </div>
             </div>
         </div>
