--- a/index.html
+++ b/index.html
@@ -453,6 +453,15 @@
                     <div class="hide top"></div>
                     <div class="hide bottom"></div>
                 </div>
+                <div class="col-md-6">
+                    <div class="card card-custom bg-white border-white border-0">
+                        <div class="card-body">
+                            <h3 class="card-title">Test your eligibility for International Studies</h3>
+                            <p class="card-text">We offer a variety of tests to help you determine if you are eligible for our program. Each test has its own requirements and time limit.</p>
+                            <a href="#" class="btn btn-primary">Start Test</a>
+    
+                    </div>
+                </div>
             </div>
         </div>
     </section>
