--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
                         We are a dedicated and passionate educational consulting company dedicated to helping our clients develop the skills and knowledge they need to succeed in today's competitive world.
                     </h5>
                     <p class="mb-4">
-                        
+
                     </p>
                     <a href="" class="btn btn-primary text-uppercase py-3 px-5">Read More</a>
                 </div>
@@ -430,6 +430,22 @@
         </div>
     </section>
 
+    <div id="quote" class="container">
+        <div class="box">
+            <i class='fas fa-quote-left fa2'></i> 
+            <div class="text">
+                <i class='fas fa-quote-right fa1'></i>
+                <div>
+                    <h3> Quote the day</h3>
+                    <p></p>
+                    <div class="author-info">
+                        <h5>Author's Name</h5>
+                        <p>City, State, Country</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
     <!---- Take Eligibility Test --->
     <section id="take-eligibility-test" class="padd-section">
         <div class="container">
