--- a/event.html
+++ b/event.html
@@ -123,85 +123,94 @@
         <div id="event-page" class="container">
             <h1>Events</h1>
             <section>
-            <h2>2 December</h2>
-            <div class="grid-wrapper">
-                <article>
-                <h3>9:00 AM</h3>
-                <p>Life finds a way. You know what? It is beets. </p>
-                </article>
-                <article>
-                <h3>10:00 AM</h3>
-                <p>I've crashed into a beet truck </p>
-                </article>
-                <article>
-                <h3>12:30 AM</h3>
-                <p>I was part of something special. </p>
-                </article>
-                <article>
-                <h3>13:30 AM</h3>
-                <p>Yeah, but your scientists were so preoccupied with whether or not they could, they didn't stop to think if they should. </p>
-                <img src="https://images.fineartamerica.com/images-medium-large-5/maroon-bells-aspen-colorado-black-and-white-photography-by-sai.jpg" alt="Black and white photo of a lake">
-        
-                </article>
-                <article>
-                <h3>14:30 AM</h3>
-                <p>Just my luck, no ice. God help us, we're in the hands of engineers. </p>
-                </article>
-                <article>
-                <h3>15:30 AM</h3>
-                <p>I gave it a cold? I gave it a virus. A computer virus. </p>
-                </article>
-                <article>
-                <h3>16:30 AM</h3>
-                <p>God creates dinosaurs. God destroys dinosaurs. God creates Man. Man destroys God. Man creates Dinosaurs. </p>
-                </article>
-                <article>
-                <h3>17:30 AM</h3>
-                <p>What do they got in there? King Kong?  </p>
-                <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/c8/Eiffel_tower_at_Exposition_Universelle%2C_Paris%2C_1889.jpg/1200px-Eiffel_tower_at_Exposition_Universelle%2C_Paris%2C_1889.jpg" alt="Black and White Eiffel Tower"" alt="Black and white Mountian view">
-                </article>
-            </div>
+                <h2>2 December</h2>
+                <div class="grid-wrapper">
+                    <article>
+                        <h3>9:00 AM</h3>
+                        <p>Life finds a way. You know what? It is beets. </p>
+                    </article>
+                    <article>
+                        <h3>10:00 AM</h3>
+                        <p>I've crashed into a beet truck </p>
+                    </article>
+                    <article>
+                        <h3>12:30 AM</h3>
+                        <p>I was part of something special. </p>
+                    </article>
+                    <article>
+                        <h3>13:30 AM</h3>
+                        <p>Yeah, but your scientists were so preoccupied with whether or not they could, they didn't
+                            stop to think if they should. </p>
+                        <img src="https://images.fineartamerica.com/images-medium-large-5/maroon-bells-aspen-colorado-black-and-white-photography-by-sai.jpg"
+                            alt="Black and white photo of a lake">
+
+                    </article>
+                    <article>
+                        <h3>14:30 AM</h3>
+                        <p>Just my luck, no ice. God help us, we're in the hands of engineers. </p>
+                    </article>
+                    <article>
+                        <h3>15:30 AM</h3>
+                        <p>I gave it a cold? I gave it a virus. A computer virus. </p>
+                    </article>
+                    <article>
+                        <h3>16:30 AM</h3>
+                        <p>God creates dinosaurs. God destroys dinosaurs. God creates Man. Man destroys God. Man creates
+                            Dinosaurs. </p>
+                    </article>
+                    <article>
+                        <h3>17:30 AM</h3>
+                        <p>What do they got in there? King Kong? </p>
+                        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/c8/Eiffel_tower_at_Exposition_Universelle%2C_Paris%2C_1889.jpg/1200px-Eiffel_tower_at_Exposition_Universelle%2C_Paris%2C_1889.jpg"
+                            alt="Black and White Eiffel Tower"" alt=" Black and white Mountian view">
+                    </article>
+                </div>
             </section>
             <section>
-            <h2>3 Jan</h2>
-            <div class="grid-wrapper">
-                <article>
-                <h3>9:00 AM</h3>
-                <p>Life finds a way. You know what? It is beets. </p>
-                </article>
-                <article>
-                <h3>10:00 AM</h3>
-                <p>I've crashed into a beet truck </p>
-                </article>
-                <article>
-                <h3>12:30 AM</h3>
-                <p>I was part of something special. </p>
-                </article>
-                <article>
-                <h3>13:30 AM</h3>
-                <p>Yeah, but your scientists were so preoccupied with whether or not they could, they didn't stop to think if they should. </p>
-                <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/c8/Eiffel_tower_at_Exposition_Universelle%2C_Paris%2C_1889.jpg/1200px-Eiffel_tower_at_Exposition_Universelle%2C_Paris%2C_1889.jpg" alt="Black and White Eiffel Tower">
-                </article>
-                <article>
-                <h3>14:30 AM</h3>
-                <p>Just my luck, no ice. God help us, we're in the hands of engineers. </p>
-                </article>
-                <article>
-                <h3>15:30 AM</h3>
-                <p>I gave it a cold? I gave it a virus. A computer virus. </p>
-                </article>
-                <article>
-                <h3>16:30 AM</h3>
-                <p>God creates dinosaurs. God destroys dinosaurs. God creates Man. Man destroys God. Man creates Dinosaurs. </p>
-                </article>
-                <article>
-                <h3>17:30 AM</h3>
-                <p>What do they got in there? King Kong?  </p>
-                <img src="https://images.fineartamerica.com/images-medium-large-5/maroon-bells-aspen-colorado-black-and-white-photography-by-sai.jpg" alt="Black and white Mountian view">
-                </article>
-            </div>
+                <h2>3 Jan</h2>
+                <div class="grid-wrapper">
+                    <article>
+                        <h3>9:00 AM</h3>
+                        <p>Life finds a way. You know what? It is beets. </p>
+                    </article>
+                    <article>
+                        <h3>10:00 AM</h3>
+                        <p>I've crashed into a beet truck </p>
+                    </article>
+                    <article>
+                        <h3>12:30 AM</h3>
+                        <p>I was part of something special. </p>
+                    </article>
+                    <article>
+                        <h3>13:30 AM</h3>
+                        <p>Yeah, but your scientists were so preoccupied with whether or not they could, they didn't
+                            stop to think if they should. </p>
+                        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/c8/Eiffel_tower_at_Exposition_Universelle%2C_Paris%2C_1889.jpg/1200px-Eiffel_tower_at_Exposition_Universelle%2C_Paris%2C_1889.jpg"
+                            alt="Black and White Eiffel Tower">
+                    </article>
+                    <article>
+                        <h3>14:30 AM</h3>
+                        <p>Just my luck, no ice. God help us, we're in the hands of engineers. </p>
+                    </article>
+                    <article>
+                        <h3>15:30 AM</h3>
+                        <p>I gave it a cold? I gave it a virus. A computer virus. </p>
+                    </article>
+                    <article>
+                        <h3>16:30 AM</h3>
+                        <p>God creates dinosaurs. God destroys dinosaurs. God creates Man. Man destroys God. Man creates
+                            Dinosaurs. </p>
+                    </article>
+                    <article>
+                        <h3>17:30 AM</h3>
+                        <p>What do they got in there? King Kong? </p>
+                        <img src="https://images.fineartamerica.com/images-medium-large-5/maroon-bells-aspen-colorado-black-and-white-photography-by-sai.jpg"
+                            alt="Black and white Mountian view">
+                    </article>
+                </div>
             </section>
-            <p class="footer-note">Design by <a href="https://dribbble.com/shots/8576480-Book-Festival-Responsive-Website">tubik</a></p>
+            <p class="footer-note">Design by <a
+                    href="https://dribbble.com/shots/8576480-Book-Festival-Responsive-Website">tubik</a></p>
         </div>
     </section>
 
@@ -999,6 +1008,56 @@
         </div>
     </div>
     <!-- Video Gallery End -->
+
+    <div id="timeline" class="container">
+
+        <div class="box">
+            <div class="container-3">
+                <span class="icon"><i class="fa fa-search"></i></span>
+                <input type="search" id="search" placeholder="Search..." />
+            </div>
+        </div>
+
+        <div class="leftbox">
+            <nav>
+                <a id="dashboard"><i class="fas fa-tachometer-alt"></i></a>
+                <a id="profile"> <i class="fas fa-user"></i> </a>
+                <a id="settings"> <i class="fas fa-cog"></i> </a>
+                <a id="messages"> <i class="fas fa-comments"></i> </a>
+                <a id="notification"> <i class="fas fa-bell"></i> </a>
+            </nav>
+        </div>
+        <div class="rightbox">
+            <div class="rb-container">
+                <ul class="rb">
+                    <li class="rb-item" ng-repeat="itembx">
+                        <div class="timestamp">
+                            3rd May 2020<br> 7:00 PM
+                        </div>
+                        <div class="item-title">Chris Serrano posted a photo on your wall.</div>
+
+                    </li>
+                    <li class="rb-item" ng-repeat="itembx">
+                        <div class="timestamp">
+                            19th May 2020<br> 3:00 PM
+                        </div>
+                        <div class="item-title">Mia Redwood commented on your last post.</div>
+
+                    </li>
+
+                    <li class="rb-item" ng-repeat="itembx">
+                        <div class="timestamp">
+                            17st June 2020<br> 7:00 PM
+                        </div>
+                        <div class="item-title">Lucas McAlister just send you a message.</div>
+
+                    </li>
+
+                </ul>
+
+            </div>
+        </div>
+    </div>
 
 
     <!-- Footer Start -->
