--- a/index.html
+++ b/index.html
@@ -430,35 +430,27 @@
         </div>
     </section>
 
-    <div id="quote" class="container">
-        <div class="box">
-            <i class='fas fa-quote-left fa2'></i> 
-            <div class="text">
-                <i class='fas fa-quote-right fa1'></i>
-                <div>
-                    <h3> Quote the day</h3>
-                    <p></p>
-                    <div class="author-info">
-                        <h5>Author's Name</h5>
-                        <p>City, State, Country</p>
+    <section class="container xl">
+        <div id="quote" class="container">
+            <div class="box">
+                <i class='fas fa-quote-left fa2'></i> 
+                <div class="text">
+                    <i class='fas fa-quote-right fa1'></i>
+                    <div>
+                        <h3> Quote the day</h3>
+                        <p></p>
+                        <div class="author-info">
+                            <h5>Author's Name</h5>
+                            <p>City, State, Country</p>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
-    </div>
-    <!---- Take Eligibility Test --->
-    <section id="take-eligibility-test" class="padd-section">
-        <div class="container">
-            <div class="pb-5">
-                <div class="row g-4 align-items-end">
-                    <div class="col-xl-8">
-                        <h4 class="text-secondary sub-title fw-bold wow fadeInUp" data-wow-delay="0.1s">Take Test</h4>
-                        <h1 class="display-2 mb-0 wow fadeInUp" data-wow-delay="0.3s">Eligibility Test </h1>
-                    </div>
+    </section>  
 
-                </div>
-            </div>
-        </div>
+    <!---- Take Eligibility Test --->
+    <section class="padd-section">
         <div id="test" class="container">
             <div class="row">
                 <div class="frame">
@@ -486,102 +478,7 @@
         </div>
     </section>
 
-    <!--- Testimonials Section --->
-    <section id="testimonials" class="padd-section">
-        <div class="container">
-            <div class="pb-5">
-                <div class="row g-4 align-items-end">
-                    <div class="col-xl-8">
-                        <h4 class="text-secondary sub-title fw-bold wow fadeInUp" data-wow-delay="0.1s">Testimonials
-                        </h4>
-                        <h1 class="display-2 mb-0 wow fadeInUp" data-wow-delay="0.3s">What Our Students Say.</p>
-                    </div>
-                </div>
-            </div>
-
-            <div class="container">
-                <div class="testimonial-carousel owl-carousel">
-                    <div class="testimonial-item">
-                        <img src="img/testimonial-1.jpg" alt="Testimonial 1">
-                        <h3>John Doe</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed viverra faucibus metus, in
-                            ultricies est consectetur.</p>
-                    </div>
-                    <div class="testimonial-item">
-                        <img src="img/testimonial-2.jpg" alt="Testimonial 2">
-                        <h3>Jane Doe</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed viverra faucibus metus, in
-                            ultricies est consectetur.</p>
-                    </div>
-                    <div class="testimonial-item">
-                        <img src="img/testimonial-3.jpg" alt="Testimonial 3">
-                        <h3>John Smith</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed viverra faucibus metus, in
-                            ultricies est consectetur.</p>
-                    </div>
-                </div>
-            </div>
-    </section>
-
-    <section id="frequent-asked">
-        <div class="container">
-            <h2>Frequently Asked Questions</h2>
-
-            <div style="visibility: hidden; position: absolute; width: 0px; height: 0px;">
-                <svg xmlns="http://www.w3.org/2000/svg">
-                    <symbol viewBox="0 0 24 24" id="expand-more">
-                        <path d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z" />
-                        <path d="M0 0h24v24H0z" fill="none" />
-                    </symbol>
-                    <symbol viewBox="0 0 24 24" id="close">
-                        <path
-                            d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z" />
-                        <path d="M0 0h24v24H0z" fill="none" />
-                    </symbol>
-                </svg>
-            </div>
-
-            <details open>
-                <summary>
-                    Does this product have what I need?
-                    <svg class="control-icon control-icon-expand" width="24" height="24" role="presentation">
-                        <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#expand-more" />
-                    </svg>
-                    <svg class="control-icon control-icon-close" width="24" height="24" role="presentation">
-                        <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#close" />
-                    </svg>
-                </summary>
-                <p>Totally. Totally does.</p>
-            </details>
-
-            <details>
-
-                <summary>
-                    Can I use it all the time?
-                    <svg class="control-icon control-icon-expand" width="24" height="24" role="presentation">
-                        <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#expand-more" />
-                    </svg>
-                    <svg class="control-icon control-icon-close" width="24" height="24" role="presentation">
-                        <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#close" />
-                    </svg>
-                </summary>
-                <p>Of course you can, we won't stop you.</p>
-            </details>
-
-            <details>
-                <summary>
-                    Are there any restrictions?
-                    <svg class="control-icon control-icon-expand" width="24" height="24" role="presentation">
-                        <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#expand-more" />
-                    </svg>
-                    <svg class="control-icon control-icon-close" width="24" height="24" role="presentation">
-                        <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#close" />
-                    </svg>
-                </summary>
-                <p>Only your imagination my friend. Go forth!</p>
-            </details>
-        </div>
-    </section>
+    
 
     <!--- Scholarships and Universities --->
     <section id="scholarships" class="padd-section">
