--- a/index.html
+++ b/index.html
@@ -478,7 +478,7 @@
         </div>
     </section>
 
-    
+
 
     <!--- Scholarships and Universities --->
     <section id="scholarships" class="padd-section">
@@ -500,7 +500,7 @@
             </div>
         </div>
 
-        <div class="container" <div class="row mb-4">
+        <div class="container">
             <div class="col-md-6">
                 <input type="text" class="form-control" id="searchInput" placeholder="Search universities...">
             </div>
@@ -513,7 +513,7 @@
                 </select>
             </div>
         </div>
-        <div class="row scholarship-slider center">
+        <div class="row scholarshi center">
             <div class="col-md-4">
                 <div class="card scholarship-box h-100">
                     <img src="img/courses-2.jpg" class="card-img-top" alt="University of Oxford">
