--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
     <!-- Navbar End -->
 
     <!-- carousel -->
-    <div class="carousel">
+    <section class="carousel">
         <!-- list item -->
         <div class="list">
             <div class="item">
@@ -210,10 +210,10 @@
         <div class="time"></div>
 
         <div class="waves"></div>
-    </div>
+    </section>
 
     <!-- About Start -->
-    <div class="container-fluid py-5">
+    <section class="container-fluid py-5">
         <div class="container py-5">
             <div class="row align-items-center">
                 <div class="col-lg-6">
@@ -233,17 +233,17 @@
                 </div>
             </div>
         </div>
-    </div>
+    </section>
     <!-- About End -->
 
     <!-- Counter Facts Start -->
-    <div class="container-fluid counter-facts py-5">
+    <section class="container-fluid counter-facts py-5">
         <div class="container">
             <div class="row">
                 <div class="col-12 col-sm-6 col-md-6 col-xl-3 wow fadeInUp" data-wow-delay="0.1s">
                     <div class="counter">
                         <div class="counter-icon w-100 d-flex align-items-center justify-content-center">
-                            <h3>Courses & Programss</h3>
+                            <h3>Programs</h3>
                         </div>
                         <div class="counter-content d-flex align-items-center justify-content-center mt-4">
                             <span class="counter-value" data-toggle="counter-up">158</span>
@@ -286,7 +286,7 @@
                 </div>
             </div>
         </div>
-    </div>
+    </section>
     <!-- Counter Facts End -->
 
     <!-- Video Section -->
@@ -305,10 +305,9 @@
     </section>
     <!-- END Video Section -->
 
-    <div class="container">
+    <section class="container">
         <div class="row pt-5 m-auto">
             <div class="col-md-6 col-lg-4 pb-3">
-                <!-- Copy the content below until next comment -->
                 <div class="card card-custom bg-white border-white border-0">
                     <div class="card-custom-img"
                         style="background-image: url(http://res.cloudinary.com/d3/image/upload/c_scale,q_auto:good,w_1110/trianglify-v1-cs85g_cc5d2i.jpg);">
@@ -372,7 +371,7 @@
                 </div>
             </div>
         </div>
-    </div>
+    </section>
 
     <!-- Services Section -->
     <section id="services" class="padd-section">
@@ -472,87 +471,6 @@
                             <p class="card-text">We offer a variety of tests to help you determine if you are eligible for our program. Each test has its own requirements and time limit.</p>
                             <a href="#" class="btn btn-primary">Start Test</a>
                         </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
-
-
-
-    <!--- Scholarships and Universities --->
-    <section id="scholarships" class="padd-section">
-        <div class="container">
-            <div class="pb-5">
-                <div class="row g-4 align-items-end">
-                    <div class="col-xl-8">
-                        <h4 class="text-secondary sub-title fw-bold wow fadeInUp" data-wow-delay="0.1s">Universities
-                        </h4>
-                        <h1 class="display-2 mb-0 wow fadeInUp" data-wow-delay="0.3s">Scholarships From our Partners
-                        </h1>
-                    </div>
-                    <div class="col-xl-4 text-xl-end wow fadeInUp" data-wow-delay="0.3s">
-                        <a class="btn btn-primary rounded-pill text-white py-3 px-5" href="university.html">
-                            View All <i class="fas fa-university"></i>
-                        </a>
-                    </div>
-                </div>
-            </div>
-        </div>
-
-        <div class="container">
-            <div class="col-md-6">
-                <input type="text" class="form-control" id="searchInput" placeholder="Search universities...">
-            </div>
-            <div class="col-md-6">
-                <select class="form-select" id="filterSelect">
-                    <option value="">All Countries</option>
-                    <option value="UK">UK</option>
-                    <option value="USA">USA</option>
-                    <option value="Canada">Canada</option>
-                </select>
-            </div>
-        </div>
-        <div class="row scholarshi center">
-            <div class="col-md-4">
-                <div class="card scholarship-box h-100">
-                    <img src="img/courses-2.jpg" class="card-img-top" alt="University of Oxford">
-                    <div class="card-body">
-                        <h3 class="card-title"><i class="fas fa-landmark"></i> University of Oxford</h3>
-                        <p class="card-text">World-renowned university offering prestigious scholarships for
-                            international students.</p>
-                        <a href="#" class="btn btn-primary">Apply Now</a>
-                    </div>
-                    <div class="card-footer">
-                        <small class="text-muted">Location: UK</small>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-4">
-                <div class="card scholarship-box h-100">
-                    <img src="img/hero-slide-3.jpg" class="card-img-top" alt="Harvard University">
-                    <div class="card-body">
-                        <h3 class="card-title"><i class="fas fa-university"></i> Harvard University</h3>
-                        <p class="card-text">Ivy League institution with extensive financial aid options for
-                            qualified applicants.</p>
-                        <a href="#" class="btn btn-primary">Apply Now</a>
-                    </div>
-                    <div class="card-footer">
-                        <small class="text-muted">Location: USA</small>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-4">
-                <div class="card scholarship-box h-100">
-                    <img src="img/hero-slide-1.jpg" class="card-img-top" alt="Stanford University">
-                    <div class="card-body">
-                        <h3 class="card-title"><i class="fas fa-graduation-cap"></i> Stanford University</h3>
-                        <p class="card-text">Leading research university offering full-ride scholarships to
-                            exceptional students.</p>
-                        <a href="#" class="btn btn-primary">Apply Now</a>
-                    </div>
-                    <div class="card-footer">
-                        <small class="text-muted">Location: USA</small>
                     </div>
                 </div>
             </div>
@@ -766,7 +684,7 @@
     <!-- Training End -->
 
     <!---- Contact Us Start--->
-    <div class="container">
+    <section class="container">
         <div class="row align-items-center">
             <div class="contact">
                 <div class="col-md-6">
@@ -816,7 +734,7 @@
             <script async defer src="https://maps.googleapis.com/maps/api/js?key=YOUR_API_KEY&callback=initMap">
             </script>
         </div>
-    </div>
+    </section>
 
     <!-- Footer -->
     <!-- Footer Start -->
