--- a/index.html
+++ b/index.html
@@ -71,20 +71,6 @@
 
     <!-- Navbar Start -->
     <nav class="fh5co-nav" role="navigation">
-		<div class="top">
-			<div class="container">
-				<div class="row">
-					<div class="col-xs-12 text-right">
-						<p class="num">Call: +01 123 456 7890</p>
-						<ul class="fh5co-social">
-							<li><a href="#"><i class="icon-twitter"></i></a></li>
-							<li><a href="#"><i class="icon-dribbble"></i></a></li>
-							<li><a href="#"><i class="icon-github"></i></a></li>
-						</ul>
-					</div>
-				</div>
-			</div>
-		</div>
 		<div class="top-menu">
 			<div class="container">
 				<div class="row">
@@ -94,8 +80,9 @@
 					<div class="col-xs-11 text-right menu-1">
 						<ul>
 							<li class="active"><a href="index.html">Home</a></li>
-							<li><a href="courses.html">Courses</a></li>
-							<li><a href="pricing.html">Pricing</a></li>
+							<li><a href="scholarships.html">Scholarships</a></li>
+							<li><a href="about.html">About</a></li>
+                            <li><a href="services.html">Services</a></li>
 							<li class="has-dropdown">
 								<a href="blog.html">Blog</a>
 								<ul class="dropdown">
@@ -105,6 +92,7 @@
 									<li><a href="#">API</a></li>
 								</ul>
 							</li>
+                            
 							<li><a href="contact.html">Contact</a></li>
 							<li class="btn-cta"><a href="#"><span>Login</span></a></li>
 							<li class="btn-cta"><a href="#"><span>Create a Course</span></a></li>
